Tools/TestWebKitAPI/Tests/mac/NavigatorLanguage.mm
@@ -68,21 +68,17 @@ static NSString *languageForSystemLanguage(WebView* webView, NSString *systemLan
     return [webView stringByEvaluatingJavaScriptFromString:@"navigator.language"];
 }
 
-// These tests document current behavior. Some of the current results may not be right. Note that
-// this oddly assumes that the user has set their language to something possibly-foreign but still
-// left their region as US. Hence the "-us" variants.
-// FIXME: These tests should also set the region to see how WebKit will handle that.
-// https://bugs.webkit.org/show_bug.cgi?id=157039
+// These tests document current behavior. Some of the current results may not be right.
 NSArray *tests = @[
-    @[@"ru", @"ru-us"], // This does not match other browsers or CFNetwork's Accept-Language, which all use "ru".
+    @[@"ru", @"ru-ru"], // This does not match other browsers or CFNetwork's Accept-Language, which all use "ru".
     @[@"en", @"en-us"],
     @[@"en-GB", @"en-gb"],
     @[@"en-US", @"en-us"],
-    @[@"ja", @"ja-us"],
-    @[@"hi", @"hi-us"],
+    @[@"ja", @"ja-jp"],
+    @[@"hi", @"hi-in"],
     @[@"zh-TW", @"zh-tw"], // This should not map to the generic zh-hant, see rdar://problem/21395180.
     @[@"zh-HK", @"zh-tw"],
-    @[@"es", @"es-us"],
+    @[@"es", @"es-es"],
     @[@"es-MX", @"es-xl"],
     @[@"es-ES", @"es-es"],
     @[@"es-419", @"es-xl"],
@@ -90,7 +86,7 @@ NSArray *tests = @[
     @[@"zh-Hant", @"zh-tw"],
     @[@"pt-BR", @"pt-br"],
     @[@"pt-PT", @"pt-pt"],
-    @[@"fr", @"fr-us"],
+    @[@"fr", @"fr-fr"],
     @[@"fr-CA", @"fr-ca"],
 ];
 
